Add known bugs in readme and clean up code in html and css files

--- a/form-confirmation.html
+++ b/form-confirmation.html
@@ -13,8 +13,7 @@
 
 <body>
 
-    <!-- Header 'Navigation Area and Hero image' -->
-   
+    <!-- Header 'Logo and Navigation Area' -->
     <header>
         <a href="index.html" id="logo">
             <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
@@ -28,16 +27,19 @@
             </ul>
         </nav>
     </header>
-        <!-- Div 'Hero image' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0') -->
-        <div class="hero">
-            <div class="hero-image">
-                <p id="quote-plate">
-                    Thank you! We have receieved your message and will get back to you as soon as possible! <a href="index.html" id="link-form" aria-label="Link back to main page (opens within the same tab)">Click here to get back to the main page!</a> 
-                </p>
-            </div>
+    <!-- 'Hero Image Area' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0) -->
+    <div class="hero">
+        <div class="hero-image">
+            <p id="quote-plate">
+                Thank you! We have receieved your message and will get back to you as soon as possible! <a
+                    href="index.html" id="link-form"
+                    aria-label="Link back to main page (opens within the same tab)">Click here to get back to the main
+                    page!</a>
+            </p>
         </div>
- 
-    <!-- Div 'Footer' -->
+    </div>
+
+    <!-- 'Footer Area' -->
     <div id="footer">
         <div class="footer-content">
             <div id="copyright">
