--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!-- Header 'Navigation Area and Hero image' -->
+    <!-- Header 'Logo and Navigation Area' -->
     <div class="box-area">
         <header>
             <div class="wrapper">
@@ -31,7 +31,8 @@
             </div>
         </header>
     </div>
-    <!-- Div 'Hero image' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0') -->
+
+    <!-- 'Hero Image Area' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0) -->
     <div class="hero">
         <div class="hero-image">
             <p id="quote-plate">
@@ -117,7 +118,7 @@
                 </div>
             </div>
 
-            <!-- Div 'Porfolio Clients' -->
+            <!-- 'Porfolio Clients' -->
             <div class="clients">
                 <div class="portfolio-clients-element">
                     <ul id="clients">
@@ -134,7 +135,7 @@
                 </div>
             </div>
 
-            <!-- Div 'Porfolio Media (video / audio)' -->
+            <!-- 'Porfolio Media (video / audio)' -->
             <div class="portfolio-grid">
                 <div class="portfolio-grid-element">
                     <h3 class="portfolio-title">Artist X Live Video <i class="fa-solid fa-file-video"></i></h3>
@@ -151,17 +152,16 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-
                         <!-- Video from www.shutterstock.com -->
-                        <video controls muted loop>
+                        <video autostart controls muted loop>
                             <source src="assets/videos/video_artist_x.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
-                            <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm" target="_blank" rel="noopener" aria-label="Link to Video clip for Artist X (opens in a new tab)">Link
+                            <a href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm"
+                                target="_blank" rel="noopener"
+                                aria-label="Link to Video clip for Artist X (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
-
                     </p>
                 </div>
 
@@ -183,11 +183,12 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video controls muted loop>
+                        <video autostart controls muted loop>
                             <source src="assets/videos/video_artist_y.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
-                            <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm" target="_blank" rel="noopener" aria-label="Link to Video clip for Artist Y (opens in a new tab)">Link
+                            <a href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm"
+                                target="_blank" rel="noopener"
+                                aria-label="Link to Video clip for Artist Y (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
@@ -210,32 +211,40 @@
                     <p>
                         <audio src="assets/audio/audio_1.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_1.mp3" target="_blank" aria-label="Link to Audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip 1.</a>
+                            <a href="assets/audio/audio_1.mp3" target="_blank"
+                                aria-label="Link to Audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip
+                                1.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_2.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_2.mp3" target="_blank" aria-label="Link to Audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip 2.</a>
+                            <a href="assets/audio/audio_2.mp3" target="_blank"
+                                aria-label="Link to Audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip
+                                2.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_3.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_3.mp3" target="_blank" aria-label="Link to Audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip 3.</a>
+                            <a href="assets/audio/audio_3.mp3" target="_blank"
+                                aria-label="Link to Audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip
+                                3.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_4.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_4.mp3" target="_blank" aria-label="Link to Audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip 4.</a>
+                            <a href="assets/audio/audio_4.mp3" target="_blank"
+                                aria-label="Link to Audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip
+                                4.</a>
                         </audio>
                     </p>
                 </div>
             </div>
         </section>
 
-        <!-- Section 'Contact' -->
+        <!-- Section 'Contact Us' -->
         <section id="contact">
             <h2>Contact Us <i class="fa-solid fa-address-card"></i></h2>
             <div class="contact-us-grid">
@@ -244,7 +253,7 @@
                         asterisk are required.</p>
                 </div>
 
-                <!-- Div 'Contact Form' -->
+                <!-- 'Contact Form' -->
                 <div class="contact-us-grid-element">
                     <form class="contact-form" method="GET" action="form-confirmation.html">
                         <label for="first-name">First Name: *
@@ -278,7 +287,7 @@
                     </form>
                 </div>
 
-                <!-- Div 'Embedded Google Map' -->
+                <!-- 'Embedded Google Map' -->
                 <div class="contact-us-grid-element">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6942.917595719306!2d19.702332305092682!3d64.21217938354455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c0bbe0e3d8215%3A0x3a67db692154a748!2sVindeln%205%2C%20922%2091%20Vindeln!5e0!3m2!1ssv!2sse!4v1657876750495!5m2!1ssv!2sse"
@@ -286,7 +295,7 @@
                         referrerpolicy="no-referrer-when-downgrade" title="Google Map"></iframe>
                 </div>
 
-                <!-- Div 'Contact Address' -->
+                <!-- 'Contact Address' -->
                 <div class="contact-us-grid-element">
                     <div id="address">
                         <p>Creative Dreams AB</p>
@@ -295,7 +304,7 @@
                         <p>Phone: +46(0)123 45 67</p>
                     </div>
 
-                    <!-- Div 'Social Media Bar' -->
+                    <!-- 'Social Media Bar' -->
                     <div id="social-media-bar">
                         <ul class="social-media-list">
                             <li>
@@ -331,7 +340,7 @@
 
     </main>
 
-    <!-- Div 'Footer' -->
+    <!-- 'Footer Area' -->
     <div id="footer">
         <div class="footer-content">
             <div id="copyright">
@@ -343,7 +352,7 @@
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
 
-    <!-- Jquery script -->
+    <!-- jQuery script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
     <!-- Script.js -->
