Change portfolio height in media queries

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video autostart controls muted loop>
+                        <video autoplay controls muted loop>
                             <source src="assets/videos/video_artist_x.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm"
@@ -183,7 +183,7 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video autostart controls muted loop>
+                        <video autoplay controls muted loop>
                             <source src="assets/videos/video_artist_y.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm"
