Clean up code and upload new images to readme file

--- a/form-confirmation.html
+++ b/form-confirmation.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!-- Header 'Logo and Navigation Area' -->
     <header>
         <a href="index.html" id="logo">
@@ -38,18 +37,23 @@
             </p>
         </div>
     </div>
-
     <!-- 'Footer Area' -->
-    <div id="footer">
-        <div class="footer-content">
-            <div id="copyright">
-                <p>©2022 Creative Dreams</p>
+    <footer>
+        <div id="footer">
+            <div class="footer-content">
+                <div id="copyright">
+                    <p>©2022 Creative Dreams</p>
+                </div>
             </div>
         </div>
-    </div>
-
+    </footer>
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
+    <!-- jQuery script -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <!-- Script.js -->
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
