--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!-- Header 'Logo and Navigation Area' -->
     <div class="box-area">
         <header>
@@ -31,7 +30,6 @@
             </div>
         </header>
     </div>
-
     <!-- 'Hero Image Area' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0) -->
     <div class="hero">
         <div class="hero-image">
@@ -41,9 +39,7 @@
             </p>
         </div>
     </div>
-
     <main>
-
         <!-- Section 'About Us' -->
         <section id="about-us">
             <h2>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h2>
@@ -62,7 +58,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Section 'Our Services' -->
         <section id="our-services">
             <h2>This is what we do <i class="fa-solid fa-lightbulb"></i></h2>
@@ -103,7 +98,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Section 'Portfolio' -->
         <section id="portfolio">
             <h2>Portfolio <i class="fa-solid fa-folder-closed"></i></h2>
@@ -112,29 +106,31 @@
                     <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams
                         portfolio and here you can find examples of what we have done in the past. We have worked within
                         many different genres of music/sound and below you can see examples of clients and artists/bands
-                        we have worked with. Hopefully this will convince you to lay your trust in us and so that we can
+                        we have worked with. Hopefully this will convince you to lay your trust in us so that we can
                         do great things together!
                     </p>
                 </div>
             </div>
-
             <!-- 'Porfolio Clients' -->
             <div class="clients">
                 <div class="portfolio-clients-element">
                     <ul id="clients">
                         <li>
-                            <img src="assets/images/client_a.png" alt="Logo of Client A" height="200" width="200"></li>
+                            <img src="assets/images/logo_eagle_records.png" alt="Logo of Eagle Records" height="200"
+                                width="200"></li>
                         <li>
-                            <img src="assets/images/client_b.png" alt="Logo of Client B" height="200" width="200"></li>
+                            <img src="assets/images/logo_best_band_ever.png" alt="Logo of Best Band Ever" height="200"
+                                width="200"></li>
                         <li>
-                            <img src="assets/images/client_c.png" alt="Logo of Client C" height="200" width="200"></li>
+                            <img src="assets/images/logo_cool_record_company.png" alt="Logo of Cool Record Company"
+                                height="200" width="200"></li>
                         <li>
-                            <img src="assets/images/client_d.png" alt="Logo of Client D" height="200" width="200"></li>
+                            <img src="assets/images/logo_second_best_band_ever.png" alt="Logo of Second Best Band Ever"
+                                height="200" width="200"></li>
                         <li>
                     </ul>
                 </div>
             </div>
-
             <!-- 'Porfolio Media (video / audio)' -->
             <div class="portfolio-grid">
                 <div class="portfolio-grid-element">
@@ -158,13 +154,12 @@
                             Your browser doesn't support HTML5 video.
                             <a href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm"
                                 target="_blank" rel="noopener"
-                                aria-label="Link to Video clip for Artist X (opens in a new tab)">Link
+                                aria-label="Link to video clip for Artist X (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
                     </p>
                 </div>
-
                 <div class="portfolio-grid-element">
                     <h3 class="portfolio-title">Artist Y Live Video <i class="fa-solid fa-file-video"></i></h3>
                     <p class="portfolio-media-description">
@@ -188,7 +183,7 @@
                             Your browser doesn't support HTML5 video.
                             <a href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm"
                                 target="_blank" rel="noopener"
-                                aria-label="Link to Video clip for Artist Y (opens in a new tab)">Link
+                                aria-label="Link to video clip for Artist Y (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
@@ -203,7 +198,7 @@
                         beginning of 2021.
                         <span>'We are so glad that we had Creative Dreams in our team during the process of making the
                             song. They gave us new angles and ideas that helped us step out from our comfort zone. And
-                            it as really nice to do the recording out in the woods in
+                            it was really nice to do the recording out in the woods in
                             nowhere!'</span>
                     </p>
                 </div>
@@ -212,7 +207,7 @@
                         <audio src="assets/audio/audio_1.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
                             <a href="assets/audio/audio_1.mp3" target="_blank"
-                                aria-label="Link to Audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip
+                                aria-label="Link to audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip
                                 1.</a>
                         </audio>
                     </p>
@@ -220,7 +215,7 @@
                         <audio src="assets/audio/audio_2.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
                             <a href="assets/audio/audio_2.mp3" target="_blank"
-                                aria-label="Link to Audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip
+                                aria-label="Link to audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip
                                 2.</a>
                         </audio>
                     </p>
@@ -228,7 +223,7 @@
                         <audio src="assets/audio/audio_3.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
                             <a href="assets/audio/audio_3.mp3" target="_blank"
-                                aria-label="Link to Audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip
+                                aria-label="Link to audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip
                                 3.</a>
                         </audio>
                     </p>
@@ -236,23 +231,21 @@
                         <audio src="assets/audio/audio_4.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
                             <a href="assets/audio/audio_4.mp3" target="_blank"
-                                aria-label="Link to Audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip
+                                aria-label="Link to audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip
                                 4.</a>
                         </audio>
                     </p>
                 </div>
             </div>
         </section>
-
         <!-- Section 'Contact Us' -->
         <section id="contact">
             <h2>Contact Us <i class="fa-solid fa-address-card"></i></h2>
             <div class="contact-us-grid">
                 <div class="contact-us-grid-element">
-                    <p>Feel free to contact us to get started, or to just send as a greeting! Fields marked with an
+                    <p>Feel free to contact us to get started, or to just send us a greeting! Fields marked with an
                         asterisk are required.</p>
                 </div>
-
                 <!-- 'Contact Form' -->
                 <div class="contact-us-grid-element">
                     <form class="contact-form" method="GET" action="form-confirmation.html">
@@ -286,7 +279,6 @@
                         <input class="submit-button" id="submit-button" type="submit" value="Submit">
                     </form>
                 </div>
-
                 <!-- 'Embedded Google Map' -->
                 <div class="contact-us-grid-element">
                     <iframe
@@ -294,7 +286,6 @@
                         width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade" title="Google Map"></iframe>
                 </div>
-
                 <!-- 'Contact Address' -->
                 <div class="contact-us-grid-element">
                     <div id="address">
@@ -303,7 +294,6 @@
                         <p>123 45 Vindeln, Sweden</p>
                         <p>Phone: +46(0)123 45 67</p>
                     </div>
-
                     <!-- 'Social Media Bar' -->
                     <div id="social-media-bar">
                         <ul class="social-media-list">
@@ -337,24 +327,21 @@
                 </div>
             </div>
         </section>
-
     </main>
-
     <!-- 'Footer Area' -->
-    <div id="footer">
-        <div class="footer-content">
-            <div id="copyright">
-                <p>©2022 Creative Dreams</p>
+    <footer>
+        <div id="footer">
+            <div class="footer-content">
+                <div id="copyright">
+                    <p>©2022 Creative Dreams</p>
+                </div>
             </div>
         </div>
-    </div>
-
+    </footer>
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
-
     <!-- jQuery script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-
     <!-- Script.js -->
     <script src="assets/script/script.js"></script>
 </body>
