Change filenames in audio folder and change design in bug section in readme file

--- a/index.html
+++ b/index.html
@@ -204,33 +204,33 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <audio src="assets/audio/audio_1.mp3" controls loop>
+                        <audio src="assets/audio/artist_z_audio_1.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_1.mp3" target="_blank"
+                            <a href="assets/audio/artist_z_audio_1.mp3" target="_blank"
                                 aria-label="Link to audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip
                                 1.</a>
                         </audio>
                     </p>
                     <p>
-                        <audio src="assets/audio/audio_2.mp3" controls loop>
+                        <audio src="assets/audio/artist_z_audio_2.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_2.mp3" target="_blank"
+                            <a href="assets/audio/artist_z_audio_2.mp3" target="_blank"
                                 aria-label="Link to audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip
                                 2.</a>
                         </audio>
                     </p>
                     <p>
-                        <audio src="assets/audio/audio_3.mp3" controls loop>
+                        <audio src="assets/audio/artist_z_audio_3.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_3.mp3" target="_blank"
+                            <a href="assets/audio/artist_z_audio_3.mp3" target="_blank"
                                 aria-label="Link to audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip
                                 3.</a>
                         </audio>
                     </p>
                     <p>
-                        <audio src="assets/audio/audio_4.mp3" controls loop>
+                        <audio src="assets/audio/artist_z_audio_4.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_4.mp3" target="_blank"
+                            <a href="assets/audio/artist_z_audio_4.mp3" target="_blank"
                                 aria-label="Link to audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip
                                 4.</a>
                         </audio>
